--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,30 +1,33 @@
-{% set version = "0.12.0" %}
+{% set version = "1.0.0" %}
 
 package:
   name: genv
   version: {{ version }}
 
 source:
-  url: https://github.com/run-ai/genv/archive/v{{ version }}.tar.gz
-  sha256: f6247034612f33d228d508e1a8a4679ed85a9d007b44fcc6162f017e96a8ecb8
+  url: https://pypi.io/packages/source/g/genv/genv-{{ version }}.tar.gz
+  sha256: 16f1be93c91e2b0216128e192eeb7e5a8001b4d53367c10fd0c0bac86aa11aaa
 
 build:
   skip: true  # [win]
   number: 0
 
 requirements:
+  host:
+    - python >=3.7
+    - pip
   run:
-    - python
+    - python >=3.7
 
 test:
   commands:
-    - genv help
+    - genv --help
 
 about:
   home: https://github.com/run-ai/genv
-  summary: GPU Environment Management
+  summary: GPU environment and cluster management
   description: |
-    genv lets you easily control, configure and monitor the GPU resources that you are using.
+    Genv lets you easily control, configure, monitor and enforce the GPU resources that you are using.
     It is intendend to improve the life of individual GPU users as well as teams that share multi-GPU machines.
     This project was highly inspired by pyenv and other version, package and environment management software like Conda, nvm, rbenv.
   license: AGPL-3.0-or-later
