--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,10 +18,11 @@ requirements:
     - pip
   run:
     - python >=3.7
+    - psutil
 
 test:
   commands:
-    - genv --help
+    - genv version
 
 about:
   home: https://github.com/run-ai/genv
